add name and img

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 </head>
 
 <body>
+    <div id="name"></div>
     <div id="fb-root"></div>
     <section id="main">
         <h2>This is a HTML5 Canvas Pages with Facebook</h2>
