--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
 <body>
     <div id="fb-root"></div>
     <section id="main">
-    <div id="name"></div>
+    <h1 id="name"></h1>
+    <img id="photo">
+    <div>
         <h2>This is a HTML5 Canvas Pages with Facebook</h2>
         <canvas width="540" height="540" id="canvas"></canvas>
     </section>
