--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <section id="main">
     <h1 id="name"></h1>
     <img id="photo">
-    <div id="accesstoken" display="none"></div>
+    <div id="accesstoken" style="display:none"></div>
     <div>
         <h2>This is a HTML5 Canvas Pages with Facebook</h2>
         <canvas width="540" height="540" id="canvas"></canvas>
