--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <div id="accesstoken" style="display:none"></div>
     <div>
         <h2>This is a HTML5 Canvas Pages with Facebook</h2>
-        <ul id="albums"></ul>
+        <ul id="albums">選取相簿照片</ul>
         <canvas width="540" height="540" id="canvas"></canvas>
     </section>
     <div class="inputtext" style="width:600px; margin:0 auto;">
