--- a/index.html
+++ b/index.html
@@ -31,7 +31,16 @@
     <div>
         <h2>This is a HTML5 Canvas Pages with Facebook</h2>
         <ul id="albums">選取相簿照片</ul>
+        <select id="frame">
+          <option value="img/overlayback.png">First</option>
+          <option value="img/overlay2.png">Second</option>
+          <option value="img/background.png">Third</option>
+          <option value="img/background1.png">forth</option>
+          <option value="img/background2.png">fifth</option>
+          <option value="img/background3.png">sixth</option>
+        </select> 
         <canvas width="540" height="540" id="canvas"></canvas>
+    </div>
     </section>
     <div class="inputtext" style="width:600px; margin:0 auto;">
         <label for="inputed">輸入客製化文字：
