--- a/index.html
+++ b/index.html
@@ -31,13 +31,20 @@
     <div>
         <h2>This is a HTML5 Canvas Pages with Facebook</h2>
         <ul id="albums">選取相簿照片</ul>
-        <select id="frame">
+        選取相框<select id="frame">
           <option value="img/overlayback.png">First</option>
           <option value="img/overlay2.png">Second</option>
           <option value="img/background.png">Third</option>
           <option value="img/background1.png">forth</option>
           <option value="img/background2.png">fifth</option>
           <option value="img/background3.png">sixth</option>
+        </select> 
+        選取文字框<select id="word">
+          <option value="img/backword.png">First</option>
+          <option value="img/backword1.png">Second</option>
+          <option value="img/backword2.png">Third</option>
+          <option value="img/backword3.png">forth</option>
+          <option value="img/backword4.png">fifth</option>
         </select> 
         <canvas width="540" height="540" id="canvas"></canvas>
     </div>
