--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <div id="accesstoken" style="display:none"></div>
     <div>
         <h2>This is a HTML5 Canvas Pages with Facebook</h2>
-        <ul id="albums">選取相簿照片</ul>
+        <ul id="albums" onClick="getPhotos()">選取相簿照片</ul>
         選取相框<select id="frame">
           <option value="img/overlayback.png">First</option>
           <option value="img/overlay2.png">Second</option>
