--- a/index.html
+++ b/index.html
@@ -61,6 +61,15 @@
     
 
     <script type="text/javascript" src="js/script.js"></script>
+    <script type="text/javascript">
+    $.when(docReady, facebookReady).then(function() {
+            if (typeof getPhotos !== 'undefined') {
+                getPhotos( function( photos ) {
+                    console.log( photos );
+                });
+            }
+        });
+    </script>
 </body>
 
 </html>
