--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <div id="accesstoken" style="display:none"></div>
     <div>
         <h2>This is a HTML5 Canvas Pages with Facebook</h2>
-        <ul id="albums" onClick="putPhoto()">選取相簿照片</ul>
+        <ul id="albums" onClick="getPhotos()">選取相簿照片</ul>
         選取相框<select id="frame">
           <option value="img/overlayback.png">First</option>
           <option value="img/overlay2.png">Second</option>
@@ -60,11 +60,6 @@
     <div class="info"></div><!-- 訊息欄位-->
 
     <script type="text/javascript" src="js/script.js"></script>
-    <script type="text/javascript">
-        function putPhoto(){
-            getPhotos(function(photos){console.log( photos );})
-        }
-    </script>
 </body>
 
 </html>
