add none option

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
         <button onClick="getPhotos()">FB選取相簿照片</button>
         <ul id="albums"></ul>
         更改相框<select id="frame">
+          <option value="">none</option>
           <option value="img/overlayback.png">First</option>
           <option value="img/overlay2.png">Second</option>
           <option value="img/background.png">Third</option>
@@ -42,6 +43,7 @@
           <option value="img/background3.png">sixth</option>
         </select> 
         更改文字框<select id="word">
+          <option value="">none</option>
           <option value="img/backword.png">First</option>
           <option value="img/backword1.png">Second</option>
           <option value="img/backword2.png">Third</option>
