fix img position

--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@
           <option value="img/backword3.png">forth</option>
           <option value="img/backword4.png">fifth</option>
         </select> 
-        <button >選取相框</button>
+<!--         <button >選取相框</button>
         <button >選取文字框</button>
-        
+ -->        
         <canvas width="540" height="540" id="canvas"></canvas>
     </div>
     </section>
