--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
           <option value="img/backword4.png">fifth</option>
           <option value="img/typography.png">sixth</option>
         </select> 
-<!--         <button >選取相框</button>
-        <button >選取文字框</button>
- -->        
+        <button onClick="move_frame()" >選取相框</button>
+        <button onClick="move_word()" >選取文字框</button>
+        
         <canvas width="540" height="540" id="canvas"></canvas>
     </div>
     </section>
