--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
     <link rel="stylesheet" href="css/style.css">
 
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
+    <script src="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
 
 	<style>
     #canvas {border: 3px solid grey;}
@@ -31,8 +33,13 @@
     <div id="accesstoken" style="display:none"></div>
     <div>
         <h2>This is a HTML5 Canvas Pages with Facebook</h2>
-        <button onClick="getPhotos()">FB選取相簿照片</button>
-        <ul id="albums"></ul>
+        <!-- <button onClick="getPhotos()">FB選取相簿</button> -->
+    <div class="btn-group">
+        <button data-toggle="dropdown" class="btn dropdown-toggle">FB選取相簿 <span class="caret"></span></button>
+        <ul class="dropdown-menu" id="albums"></ul>
+    </div>
+        <!-- <ul id="albums"></ul> -->
+
         更改相框<select id="frame">
           <option value="">none</option>
           <option value="img/overlayback.png">First</option>
