--- a/index.html
+++ b/index.html
@@ -20,6 +20,12 @@
     <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
 
 	<style>
+    body{
+        background-color: grey;
+    }
+    #main{
+        width: 750px;
+    }
     #canvas {border: 3px solid grey;}
     </style>
 
@@ -36,7 +42,9 @@
         <!-- <button onClick="getPhotos()">FB選取相簿</button> -->
     <div class="btn-group">
         <button data-toggle="dropdown" class="btn dropdown-toggle">FB選取相簿 <span class="caret"></span></button>
-        <ul class="dropdown-menu" id="albums"></ul>
+        <ul class="dropdown-menu" id="albums">
+            <li>hi</li>
+        </ul>
     </div>
         <!-- <ul id="albums"></ul> -->
 
