--- a/index.html
+++ b/index.html
@@ -41,9 +41,8 @@
         <h2>This is a HTML5 Canvas Pages with Facebook</h2>
         <!-- <button onClick="getPhotos()">FB選取相簿</button> -->
     <div class="btn-group">
-        <button data-toggle="dropdown" class="btn dropdown-toggle">FB選取相簿 <span class="caret"></span></button>
+        <button onClick="getPhotos()" data-toggle="dropdown" class="btn dropdown-toggle">FB選取相簿 <span class="caret"></span></button>
         <ul class="dropdown-menu" id="albums">
-            <li>hi</li>
         </ul>
     </div>
         <!-- <ul id="albums"></ul> -->
