add ready for fb

--- a/index.html
+++ b/index.html
@@ -96,8 +96,10 @@
           heavyImage.src = "img/backword2.png";
           heavyImage.src = "img/backword3.png";
           heavyImage.src = "img/backword4.png";
-          getPhotos();
         }
+        $(document).ready(function(){
+          getPhotos();
+      });
     </script>
 </body>
 
