--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <div id="accesstoken" style="display:none"></div>
     <div>
         <h2>This is a HTML5 Canvas Pages with Facebook</h2>
-        <!-- <button onClick="getPhotos()">FB選取相簿</button> -->
+        <button id="loadFB" onClick="getPhotos()">讀取FB相簿</button>
     <div class="btn-group">
         <button data-toggle="dropdown" class="btn dropdown-toggle">FB選取相簿 <span class="caret"></span></button>
         <ul class="dropdown-menu" id="albums">
