--- a/index.html
+++ b/index.html
@@ -27,6 +27,13 @@
         width: 750px;
     }
     #canvas {border: 3px solid grey;}
+
+    .dropdown-submenu{position:relative;}
+    .dropdown-submenu>.dropdown-menu{top:0;left:100%;margin-top:-6px;margin-left:-1px;-webkit-border-radius:0 6px 6px 6px;-moz-border-radius:0 6px 6px 6px;border-radius:0 6px 6px 6px;}
+    .dropdown-submenu:hover>.dropdown-menu{display:block;}
+    .dropdown-submenu>a:after{display:block;content:" ";float:right;width:0;height:0;border-color:transparent;border-style:solid;border-width:5px 0 5px 5px;border-left-color:#cccccc;margin-top:5px;margin-right:-10px;}
+    .dropdown-submenu:hover>a:after{border-left-color:#ffffff;}
+    .dropdown-submenu.pull-left{float:none;}.dropdown-submenu.pull-left>.dropdown-menu{left:-100%;margin-left:10px;-webkit-border-radius:6px 0 6px 6px;-moz-border-radius:6px 0 6px 6px;border-radius:6px 0 6px 6px;}
     </style>
 
 </head>
@@ -43,7 +50,23 @@
     <div class="btn-group">
         <button data-toggle="dropdown" class="btn dropdown-toggle">FB選取相簿 <span class="caret"></span></button>
         <ul class="dropdown-menu" id="albums">
+            <!-- <li class="dropdown-submenu">
+            <a tabindex="-1" href="#">More options</a>
+              <ul class="dropdown-menu">
+                <li><a tabindex="-1" href="#">Second level</a></li>
+                <li class="dropdown-submenu">
+                <a href="#">More..</a>
+                <ul class="dropdown-menu">
+                  <li><a href="#">3rd level</a></li>
+                  <li><a href="#">3rd level</a></li>
+                </ul>
+                </li>
+                <li><a href="#">Second level</a></li>
+                <li><a href="#">Second level</a></li>
+            </ul>
+          </li> -->
         </ul>
+
     </div>
         <!-- <ul id="albums"></ul> -->
 
