add disabled to loadFB

--- a/index.html
+++ b/index.html
@@ -46,26 +46,10 @@
     <div id="accesstoken" style="display:none"></div>
     <div>
         <h2>This is a HTML5 Canvas Pages with Facebook</h2>
-        <button id="loadFB" onClick="getPhotos()">讀取FB相簿</button>
+        <button id="loadFB" onClick="getPhotos()" disabled=false>讀取FB相簿</button>
     <div class="btn-group">
         <button data-toggle="dropdown" class="btn dropdown-toggle">FB選取相簿 <span class="caret"></span></button>
-        <ul class="dropdown-menu" id="albums">
-            <!-- <li class="dropdown-submenu">
-            <a tabindex="-1" href="#">More options</a>
-              <ul class="dropdown-menu">
-                <li><a tabindex="-1" href="#">Second level</a></li>
-                <li class="dropdown-submenu">
-                <a href="#">More..</a>
-                <ul class="dropdown-menu">
-                  <li><a href="#">3rd level</a></li>
-                  <li><a href="#">3rd level</a></li>
-                </ul>
-                </li>
-                <li><a href="#">Second level</a></li>
-                <li><a href="#">Second level</a></li>
-            </ul>
-          </li> -->
-        </ul>
+        <ul class="dropdown-menu" id="albums"></ul>
 
     </div>
         <!-- <ul id="albums"></ul> -->
