--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <div id="accesstoken" style="display:none"></div>
     <div>
         <h2>This is a HTML5 Canvas Pages with Facebook</h2>
-        <button id="loadFB" onClick="getPhotos()" disabled=false>讀取FB相簿</button>
+        <button id="loadFB" onClick="getPhotos()">讀取FB相簿</button>
     <div class="btn-group">
         <button data-toggle="dropdown" class="btn dropdown-toggle">FB選取相簿 <span class="caret"></span></button>
         <ul class="dropdown-menu" id="albums"></ul>
