--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <div id="fb-root"></div>
     <section id="main">
     <h1 id="name"></h1>
-    <img id="photo">
+    <img id="photo" crossOrigin="anonymous">
     <div>
         <h2>This is a HTML5 Canvas Pages with Facebook</h2>
         <button id="loadFB" onClick="getPhotos()">讀取FB相簿</button>
