--- a/index.html
+++ b/index.html
@@ -71,8 +71,9 @@
           <option value="img/backword4.png">fifth</option>
           <option value="img/typography.png">sixth</option>
         </select> 
-        <button onClick="move_frame()" >選取相框</button>
+        <button onClick="move_pic()">選取自己圖片</button>
         <button onClick="move_word()" >選取文字框</button>
+        <button onClick="move_frame()" >選取相框</button>
         <input type="file" id="upload" onchange="handleFiles(this.files)">
         <canvas width="540" height="540" id="canvas"></canvas>
     </div>
