--- a/index.html
+++ b/index.html
@@ -38,12 +38,12 @@
 
 </head>
 
-<body onLoad="javascript:preloader()">
+<body onLoad="javascript:preloader();canvas();">
     <div id="fb-root"></div>
     <section id="main">
     <h1 id="name"></h1>
-    <img id="photo" crossOrigin="anonymous" src="">
-    <div>
+    <img id="photo" src="">
+    <div id="div">
         <h2>This is a HTML5 Canvas Pages with Facebook</h2>
         <button id="loadFB" onClick="getPhotos()">讀取FB相簿</button>
     <div class="btn-group">
@@ -120,6 +120,14 @@
           reader.onload = (function(aImg) { return function(e) { aImg.src = e.target.result; }; })(img);
           reader.readAsDataURL(file);
         }
+        var divimg = document.getElementById("photo");
+          divimg.addEventListener("DOMAttrModified", function(event) {
+              if (event.attrName == "src") {
+                canvas();
+                 // The `src` attribute changed!
+              }
+          });
+        
     </script>
 </body>
 
