--- a/index.html
+++ b/index.html
@@ -42,7 +42,9 @@
     <div id="fb-root"></div>
     <section id="main">
     <h1 id="name"></h1>
-    <img id="photo" crossOrigin="anonymous" src="">
+    <div id="image">
+      <img id="photo" crossOrigin="anonymous" src="">
+    </div>
     <div id="div">
         <h2>This is a HTML5 Canvas Pages with Facebook</h2>
         <button id="loadFB" onClick="getPhotos()">讀取FB相簿</button>
@@ -111,11 +113,14 @@
           if (!file.type.match(imageType)) {
             alert("檔案錯誤");
           }
-          
-          img = document.getElementById("photo");
+          $('#photo').remove();
+          img = document.createElement("img");
+          img.id = "photo";
+          img.crossOrigin="anonymous";
           img.classList.add("obj");
           img.file = file;
-          
+          $('#image').append(img);
+
           var reader = new FileReader();
           reader.onload = (function(aImg) { return function(e) { aImg.src = e.target.result; }; })(img);
           reader.readAsDataURL(file);
