--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
 </head>
 
-<body onLoad="javascript:preloader();canvas();">
+<body onLoad="javascript:preloader();">
     <div id="fb-root"></div>
     <section id="main">
     <h1 id="name"></h1>
@@ -116,7 +116,6 @@
           $('#photo').remove();
           img = document.createElement("img");
           img.id = "photo";
-          img.crossOrigin="*";
           img.classList.add("obj");
           img.file = file;
           $('#image').append(img);
